--- a/Report.ipynb
+++ b/Report.ipynb
@@ -1104,13 +1104,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Odds Ratio for Previous Regression\n",
-    "\n"
+    "##### Odds Ratio for Previous Regression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1128,7 +1127,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1235,7 +1234,7 @@
     "\n",
     "<style>\n",
     "\n",
-    "// div.prompt {display:none}\n",
+    "div.prompt {display:none}\n",
     "\n",
     "\n",
     "h1, .h1 {\n",
